# owlGlyphs-RTXGlyphsRayTracing-PGV2020

./: .gitmodules  CMakeLists.txt  CONTRIBUTORS  README.md  testdata.glyphs
glyphs/: ArrowGlyphs.cpp  ArrowGlyphs.h  CMakeLists.txt  Glyphs.cpp  Glyphs.h  MotionSpheres.cpp  MotionSpheres.h  OptixGlyphs.cpp  OptixGlyphs.h  SphereGlyphs.cpp  SphereGlyphs.h  SuperGlyphs.cpp  SuperGlyphs.h  Triangles.cpp  Triangles.h  viewer.cpp
glyphs/device/: ArrowGlyphs.cu  Camera.h  FrameState.h  GlyphsGeom.h  MotionSpheres.cu  PerRayData.h  RayGenData.h  SphereGlyphs.cu  Super.h  SuperGlyphs.cu  TriangleMesh.h  common.cu  common.h  disney_bsdf.h  roundedCone.h
res/: arrows_screenshot.png.params  motionblur_screenshot.png.params  spheres_screenshot.png.params  super_screenshot.png.params
tools/: CMakeLists.txt  TrackVisData.cpp  TrackVisData.h  simplifyStreamLines.cpp  trk2bin.cpp
tubes/: BasicTubes.cpp  BasicTubes.h  CMakeLists.txt  InstanceTubes.cpp  InstanceTubes.h  OptixTubes.cpp  OptixTubes.h  Tubes.cpp  Tubes.h  viewer.cpp
tubes/device/: BasicTubes.cu  Camera.h  FrameState.h  InstanceTubes.cu  PerRayData.h  RayGenData.h  TubesGeom.h  common.cu  common.h
